--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
-    <title>Manu WagnoZilla</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Menu WagnoZilla</title>
 </head>
 <body>
     <button class="botao-menu">
@@ -13,11 +13,29 @@
     </button>
     <nav class="menu-lateral">
 <ul>
-    <li><i class="fa-solid fa-house"></i></li>
-    <li><i class="fa-solid fa-circle-info"></i></li>
-    <li><i class="fa-solid fa-gears"></i></li>
-    <li><i class="fa-regular fa-envelope"></i></li>
+    <li>
+        <a href="#">
+            <i class="fa-solid fa-house"></i>
+        </a>Home
+    </li>
+    <li>
+        <a href="#">
+            <i class="fa-solid fa-circle-info"></i>
+        </a>Sobre
+    </li>
+    <li><a href="#"><i class="fa-solid fa-gears"></i></a>Serviço</li>
+    <li><a href="#"><i class="fa-regular fa-envelope"></i></a>Contato</li>
 </ul>
     </nav>
+
+    <div class="background"></div>
+    
+    <main class="conteudo">
+   <h1>
+    Wagno Programação
+   </h1>
+   <p>Informações sobre Wagno Programação </p>
+    </main>
 </body>
+<script src="./scripts.js"></script>
 </html>
