--- a/index.html
+++ b/index.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
-    <title>Menu WagnoZilla</title>
+
+    <title>WagnoTech</title>
 </head>
 <body>
     <button class="botao-menu">
         <i class="fa-solid fa-bars"></i>
+
     </button>
     <nav class="menu-lateral">
-<ul>
-    <li>
-        <a href="#">
-            <i class="fa-solid fa-house"></i>
-        </a>Home
-    </li>
-    <li>
-        <a href="#">
-            <i class="fa-solid fa-circle-info"></i>
-        </a>Sobre
-    </li>
-    <li><a href="#"><i class="fa-solid fa-gears"></i></a>Serviço</li>
-    <li><a href="#"><i class="fa-regular fa-envelope"></i></a>Contato</li>
-</ul>
-    </nav>
+        <ul>
+            <li>
+                <a href="#"><i class="fa-solid fa-house"></i>Home</a>
+            </li> 
+            <li>
+                <a href="#"><i class="fas fa-info-circle"></i>Sobre</a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-solid fa-gears"></i>Service</a>
+            </li>
+            <li>
+                <a href="#"><i class="fas fa-envelope"></i>Contato</a>
+            </li>
 
+        </ul>
+
+    </nav>
     <div class="background"></div>
-    
+
     <main class="conteudo">
-   <h1>
-    Wagno Programação
-   </h1>
-   <p>Informações sobre Wagno Programação </p>
+        <h1>Wagno Tech Aprendendo Programação</h1>
+        <p>Olá, bem vindo ao Wagno Tech, aqui você aprenderá a
     </main>
+    
 </body>
-<script src="./scripts.js"></script>
+<script  src="scripts.js"></script>
 </html>
